--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,7 +3,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://your-backend-url.vercel.app/api/:path*"
+      "destination": "https://canteen-bt65.vercel.app/"
     },
     {
       "source": "/(.*)",
