--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "This project consists of two independent applications: a backend API server and a frontend React application.",
   "main": "index.js",
   "scripts": {
-    "build": "cd frontend && npm install && npx vite build",
+    "build": "cd frontend && npx vite build",
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
-    "start": "cd backend && node index.js",
     "dev:frontend": "cd frontend && npx vite --host 0.0.0.0",
     "dev:backend": "cd backend && node index.js",
     "dev:all": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\""
